// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`views/AddExperienceList renders empty list 1`] = `
<div>
  <ul
    class="css-ut905x"
  />
</div>
`;

exports[`views/AddExperienceList renders experineces list 1`] = `
<div>
  <ul
    class="css-ut905x"
  >
    <li>
      <button>
        Javascript
      </button>
    </li>
    <li>
      <button>
        Java
      </button>
    </li>
  </ul>
</div>
`;
